--- a/final/mybib.bib
+++ b/final/mybib.bib
@@ -142,7 +142,8 @@
   pages = {135-144}
 }
 @article{galembo1999,
-  author = {Alexander Galembo and Anders Askenfelt},
+  author = {A. Galembo and A. Askenfelt},
+  title = {Signal representation and estimation of spectral parameters by inharmonic comb filters with application to the piano},
   journal = {IEEE Transactions on Speech and Audio Processing},
   volume = {7},
   number = {2},
