--- a/final/mybib.bib
+++ b/final/mybib.bib
@@ -16,7 +16,7 @@
   year = {2012}
 }
 @inproceedings{barbanchoa2012,
-  author = {A. Barbancho and A. Klapuri and L. Tard{\'o}n and Isabel Barbancho},
+  author = {A. Barbancho and A. Klapuri and L. Tard{\'o}n and I. Barbancho},
   title = {Automatic transcription of guitar chords and fingering from audio},
   booktitle = {Proceedings of the IEEE Transactions on Speech and Language Processing},
   pages = {915-921},
