--- a/final/mybib.bib
+++ b/final/mybib.bib
@@ -47,14 +47,14 @@
 	booktitle = {Proceedings of the 14th International Society for Music Information Retrieval Conference},
 }
 @mastersthesis{burlet2015,
-  author = {Gregory D. Burlet},
+  author = {G. Burlet},
   title = {Guitar Tablature Transcription using a Deep Belief Network},
   school = {University of Alberta},
   address = {Canada},
   year = {2015}
 }
 @inproceedings{burns2006,
-	author = {A. M. Burns and M. M. Wanderley,},
+	author = {A. Burns and M. Wanderley,},
 	title = {Visual methods for the retrieval of guitarist fingering},
 	year = {2006},
 	month = {June},
@@ -277,7 +277,7 @@ R. Macrae and S. Dixon, “,” in , Jul. 2010, pp. 725–726.
   pages = {76-84}
 }
 @inproceedings{short2006,
-  author = {K. M. Short and R. A. Garcia},
+  author = {K. Short and R. Garcia},
   title = {Signal Analysis using the Complex Spectral Phase Evolution {(CSPE)} Method},
   booktitle = {Audio Engineering Society 120th Convention},
   address = {Paris, France},
